<resources>
    <string name="app_name">DInDinn</string>
    <string name="value">value</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="information">Information</string>
    <string name="pizza">Pizza</string>
    <string name="sushi">Sushi</string>
    <string name="drinks">Drinks</string>
    <string name="delivery">delivery</string>
    <string name="kazarov">Kazarov</string>
    <string name="pricing" > %s USD</string>
    <string name="added">Added</string>
</resources>